- Fix for checkout link permalink problems on some sites
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@4333 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,13 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.0.3 - 10/31/2011 - Aaron Edwards
+----------------------------------------------------------------------
+- Fix extra slashes in script and css urls
+- Fix excerpt issues in ads module
+- Fix Quota module post counting issues
+- Fix for checkout link permalink problems on some sites
+
 3.0.2 - 10/26/2011 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fix stripslashes issue on levels page
