--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.0.4 - 11/05/2011 - Aaron Edwards
+----------------------------------------------------------------------
+- Fix nested forms in the Upgrades module checkout screen
+
 3.0.3 - 10/31/2011 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fix extra slashes in script and css urls
