--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.0.4.1 - 12/12/2011 - Aaron Edwards
+----------------------------------------------------------------------
+- Minor WP 3.3 compatibility fixes
+
 3.0.4 - 12/02/2011 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fix nested forms in the Upgrades module checkout screen
