--- a/changelog.txt
+++ b/changelog.txt
@@ -5,11 +5,15 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.1 - 2/17/2012 - Aaron Edwards
+----------------------------------------------------------------------
+- Added Stripe gateway!
 - Pay to Blog skip redirect on bulk upgrades page
 - Fix BuddyPress groups limiting module
 - Add PSTS_QUOTA_ALLOW_OVERRIDE define: http://premium.wpmudev.org/forums/topic/any-way-to-make-pro-sites-ignore-certain-core-subsites#post-179939
 - Remove save text on checkout grid buttons when savings is negative
 - Don't allow checkouts for permanently extended sites to avoid errors
+- Fix issue with force and hide signup option when rebrand has spaces (your signup links will be different)
 
 3.0.9 - 1/30/2012 - Aaron Edwards
 ----------------------------------------------------------------------
