--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.1.1 - 2/17/2012 - Aaron Edwards
+----------------------------------------------------------------------
+- Fix post location of find sites form
+
 3.1 - 2/17/2012 - Aaron Edwards
 ----------------------------------------------------------------------
 - Added Stripe gateway!
