--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,8 @@ Change Log:
 ----------------------------------------------------------------------
 
 - Allow for default selected period and level on checkout form via PSTS_DEFAULT_LEVEL, PSTS_DEFAULT_PERIOD defines
+- Fix potential divide by zero bug on prorated refund calculation for manually extended paypal gateway blogs
+- Fix Manual stats category counts which were no longer accurate
 
 3.1.1 - 2/21/2012 - Aaron Edwards
 ----------------------------------------------------------------------
