--- a/changelog.txt
+++ b/changelog.txt
@@ -14,7 +14,7 @@ Change Log:
 - Fix error handling bug for Stripe gateway
 - Adjust response codes returned for non prosites IPNs: http://premium.wpmudev.org/forums/topic/paypal-ipn-problem
 - Add PSTS_CANCEL_LAST define that can be put in wpconfig to show cancel button at bottom of checkout form
-- Add wpcache support for the Supporter Ads module
+- Add wp_cache support for the Supporter Ads module
 
 3.1.3 - 3/19/2012 - Aaron Edwards
 ----------------------------------------------------------------------
