--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.2.2 - 5/2/2012 - Aaron Edwards
+----------------------------------------------------------------------
+- Fix menu permissions bug with Premium Plugins module introduced in 3.2.1
+
 3.2.1 - 4/24/2012 - Aaron Edwards
 ----------------------------------------------------------------------
 - Add support for Google Analytics Ecommerce Tracking
