- Allow special quota amounts for Ads removed (upgraded) sites
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@6202 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.2.3 - 5/20/2012 - Aaron Edwards
+----------------------------------------------------------------------
+- Allow special quota amounts for Ads removed (upgraded) sites
+
 3.2.2 - 5/2/2012 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fix menu permissions bug with Premium Plugins module introduced in 3.2.1
