- Fix hardcoded prefix in is_pro_user() function, props korkmaz
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@6588 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,8 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Fix hardcoded prefix in is_pro_user() function, props korkmaz
+
 3.2.3 - 5/20/2012 - Aaron Edwards
 ----------------------------------------------------------------------
 - Allow special quota amounts for Ads removed (upgraded) sites
