git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@6676 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.2.4 - 7/20/2012 - Aaron Edwards
+----------------------------------------------------------------------
 - Fix hardcoded prefix in is_pro_user() function, props korkmaz
+- Cancel subscriptions when a site/blog is deleted
 
 3.2.3 - 5/20/2012 - Aaron Edwards
 ----------------------------------------------------------------------
