Fix PayPal instructions external links
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@6814 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,8 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Fix PayPal instructions external links
+
 3.2.4 - 7/20/2012 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fix hardcoded prefix in is_pro_user() function, props korkmaz
