--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,10 @@ Change Log:
 ----------------------------------------------------------------------
 
 
+3.3.1 - 8/30/2012 - Aaron Edwards
+----------------------------------------------------------------------
+- Small bugfix for transferring Pro status from one site to another in PayPal gateway
+
 3.3 - 8/30/2012 - Aaron Edwards
 ----------------------------------------------------------------------
 - Add ability to transfer Pro status from one site to another
