--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,9 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.3.2 - 9/04/2012 - Aaron Edwards
+----------------------------------------------------------------------
+- Fix error when deleting sites with Stripe gateway active
 
 3.3.1 - 8/30/2012 - Aaron Edwards
 ----------------------------------------------------------------------
