- Don't show ads in rss feeds - Add in hook for affiliate payments on bulk upgrades - Add Japan locale to paypal list
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@7489 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@ Author: Aaron Edwards
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+- Don't show ads in rss feeds
+- Add in hook for affiliate payments on bulk upgrades
+- Add Japan locale to paypal list
 
 3.3.2 - 9/04/2012 - Aaron Edwards
 ----------------------------------------------------------------------
