- Merge Premium Themes page into normal themes list
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@7544 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,10 @@ Author: Aaron Edwards
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+3.3.3 - 10/24/2012 - Aaron Edwards
+----------------------------------------------------------------------
+- Merge Premium Themes page into normal themes list
 - Don't show ads in rss feeds
 - Add in hook for affiliate payments on bulk upgrades
 - Add Japan locale to paypal list
