--- a/changelog.txt
+++ b/changelog.txt
@@ -5,13 +5,15 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
-3.3.3 - 10/24/2012 - Aaron Edwards
+3.3.3 - 12/11/2012 - Aaron Edwards
 ----------------------------------------------------------------------
+- WP 3.5 compatibility changes
 - Merge Premium Themes page into normal themes list
 - New MarketPress Global Products Filter module
-- Don't show ads in rss feeds
+- Don't show ads in RSS feeds
 - Add in hook for affiliate payments on bulk upgrades
 - Add Japan locale to paypal list
+- Fix db errors in upgrade/install script
 
 3.3.2 - 9/04/2012 - Aaron Edwards
 ----------------------------------------------------------------------
