--- a/changelog.txt
+++ b/changelog.txt
@@ -7,13 +7,14 @@ Change Log:
 
 3.3.3 - 12/11/2012 - Aaron Edwards
 ----------------------------------------------------------------------
-- WP 3.5 compatibility changes
+- WP 3.5 compatibility for XML-RPC module (no Atom, different hooks)
 - Merge Premium Themes page into normal themes list
 - New MarketPress Global Products Filter module
 - Don't show ads in RSS feeds
 - Add in hook for affiliate payments on bulk upgrades
 - Add Japan locale to paypal list
 - Fix db errors in upgrade/install script
+- Fix bug in upload quota messages advertising wrong level
 
 3.3.2 - 9/04/2012 - Aaron Edwards
 ----------------------------------------------------------------------
