--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.3.4 - 1/8/2013 - Aaron Edwards
+----------------------------------------------------------------------
+- Fix an bug in premium themes module showing themes as network enabled: http://wp.mu/bk
+
 3.3.3 - 12/11/2012 - Aaron Edwards
 ----------------------------------------------------------------------
 - WP 3.5 compatibility for XML-RPC module (no Atom, different hooks)
