Fix missing item from change log: 3.3.4 - 1/8/2013 - Aaron Edwards ---------------------------------------------------------------------- - Fix an bug in premium themes module showing themes as network enabled: http://wp.mu/bk - Place a label onto premium plugins listed, even if a user is on the pro level: http://wp.mu/bl
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@8190 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ Change Log:
 3.3.4 - 1/8/2013 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fix an bug in premium themes module showing themes as network enabled: http://wp.mu/bk
+- Place a label onto premium plugins listed, even if a user is on the pro level: http://wp.mu/bl
 
 3.3.3 - 12/11/2012 - Aaron Edwards
 ----------------------------------------------------------------------
