--- a/changelog.txt
+++ b/changelog.txt
@@ -8,10 +8,13 @@ Change Log:
 
 3.3.5 - 1/8/2013 - Aaron Edwards
 ----------------------------------------------------------------------
+- Add in PDF receipt attachments to emails with custom logo support
 - Prevent 404 results for bbpress child forums
 - Check user has edit permissions for one blog before loading checkout.
 - If a user has one blog, load checkout page for that blog instead of asking them to select their blog from a list.
 - Search and replace email notification subjects as well as body.
+- Allow newly supported quarterly plans with Stripe
+- Sync Levels with Stripe Plans on switch from test to live (avoid errors when switching to live)
 
 3.3.4 - 1/8/2013 - Aaron Edwards
 ----------------------------------------------------------------------
