--- a/changelog.txt
+++ b/changelog.txt
@@ -5,11 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
-3.4.1 - 3/18/2013 - Aaron Edwards
+3.4.1 - 8/23/2013 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fix major problem with Stripe gateway webhooks
 - Update Stripe API files for better cross-compatibility with other plugins http://wp.mu/1r6
 - Add support for CAD and GBP to Stripe gateway
+- Fix Stripe plan syncing for quarterly prices
 - Fix payment date on email receipts to show actual date, not date of email
 - Fix bug in Premium Themes module that didn't allow overriding access to pro only themes per site
 - Add Israel & New Zealand locales to paypal gateway
