--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,8 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Ability to add a link to badge widgets & display text when no image entered in settings
+
 3.4.1 - 8/26/2013 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fix major problem with Stripe gateway webhooks
