- Change site_url() to home_url() where appropriate
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@10263 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Change Log:
 ----------------------------------------------------------------------
 
 - Ability to add a link to badge widgets & display text when no image entered in settings
+- Change site_url() to home_url() where appropriate
 
 3.4.1 - 8/26/2013 - Aaron Edwards
 ----------------------------------------------------------------------
