--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Change Log:
 
 - Ability to add a link to badge widgets & display text when no image entered in settings
 - Change site_url() to home_url() where appropriate
+- Fix Stripe level label for Quarterly
 
 3.4.1 - 8/26/2013 - Aaron Edwards
 ----------------------------------------------------------------------
