- Improve directions in Premium Plugins module
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@10676 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,8 @@ Change Log:
 - Fix Stripe level label for Quarterly
 - Add persistent object cache support
 - Don't show upgrade button to those who can't upgrade the site
+- Added Russian Rubles to paypal currencies and locale
+- Improve directions in Premium Plugins module
 
 3.4.1 - 8/26/2013 - Aaron Edwards
 ----------------------------------------------------------------------
