--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,7 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
-
+- Rewrote the Manual Payments Gateway to support form submission and email to admin
 - Ability to add a link to badge widgets & display text when no image entered in settings
 - Change site_url() to home_url() where appropriate
 - Fix Stripe level label for Quarterly
