--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Change Log:
 ----------------------------------------------------------------------
 3.4.3.7 - 5/6/2014 - Jonathan Cowher & Umesh Kumar
 ----------------------------------------------------------------------
+- Added filter 'psts_pypl_checkout_image_url' for Paypal
 - Update: merge tag to trunk
 - Fixed: Updated wp_specialchars to esc_html
 - Added: Checkout user role selection setting
