Fixed checkout url on media page, force used space check if quota enabled
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@14230 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,12 +6,14 @@ Change Log:
 ----------------------------------------------------------------------
 3.4.3.7 - 5/6/2014 - Jonathan Cowher & Umesh Kumar
 ----------------------------------------------------------------------
-- Added filter 'psts_pypl_checkout_image_url' for Paypal
+- Fixed:  Checkout url ( displayed if quota is exceeded ) on media page
+- New:    Force Network Used space check if quota is enabled, can be overridden using filter 'psts_enable_used_space_check'
+- Added:  filter 'psts_pypl_checkout_image_url' for Paypal
 - Update: merge tag to trunk
-- Fixed: Updated wp_specialchars to esc_html
-- Added: Checkout user role selection setting
-- Addes: Persistent object cache support
-- Added: Russian Rubles to paypal currencies and locale
+- Fixed:  Updated wp_specialchars to esc_html
+- Added:  Checkout user role selection setting
+- Addes:  Persistent object cache support
+- Added:  Russian Rubles to paypal currencies and locale
 - Improve directions in Premium Plugins module
 - New: Allow changing which site the checkout page is on via PSTS_CHECKOUT_SITE define
 - Fix: Upload Quota ad-free level showing when not active in ads module
