option for sort themes as per level
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@14232 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Change Log:
 ----------------------------------------------------------------------
 3.4.3.7 - 5/6/2014 - Jonathan Cowher & Umesh Kumar
 ----------------------------------------------------------------------
+- New:    Sort theme list as per levels
 - Fixed:  Checkout url ( displayed if quota is exceeded ) on media page
 - New:    Force Network Used space check if quota is enabled, can be overridden using filter 'psts_enable_used_space_check'
 - Added:  filter 'psts_pypl_checkout_image_url' for Paypal
