Allow disabling plugins page with PSTS_DISABLE_PLUGINS_PAGE_OVERRIDE define
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@14375 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@ Author: Aaron Edwards
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+
+- Allow disabling plugins page with PSTS_DISABLE_PLUGINS_PAGE_OVERRIDE define
+
 3.4.3.7 - 5/6/2014 - Jonathan Cowher & Umesh Kumar
 ----------------------------------------------------------------------
 - New:    Sort theme list as per levels
