--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ Change Log:
 
 3.4.3.7 - 5/6/2014 - Jonathan Cowher & Umesh Kumar
 ----------------------------------------------------------------------
+- Fixed:  Plugin Path variable
 - Fixed:  Translatable strings
 - Fixed:  Checkout url ( displayed if quota is exceeded ) on media page
 - New:    Force Network Used space check if quota is enabled, can be overridden using filter 'psts_enable_used_space_check'
