--- a/changelog.txt
+++ b/changelog.txt
@@ -4,16 +4,14 @@ Author: Aaron Edwards
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
-
-- Allow disabling plugins page with PSTS_DISABLE_PLUGINS_PAGE_OVERRIDE define
-
-3.4.3.7 - 5/6/2014 - Jonathan Cowher & Umesh Kumar
+3.5 - 5/6/2014 - Jonathan Cowher & Umesh Kumar
 ----------------------------------------------------------------------
 - Fixed:  Plugin Path variable
 - Fixed:  Translatable strings
 - Fixed:  Checkout url ( displayed if quota is exceeded ) on media page
 - New:    Force Network Used space check if quota is enabled, can be overridden using filter 'psts_enable_used_space_check'
-- Added:  Filter 'psts_pypl_checkout_image_url' for Paypal
+- Added:  filter 'psts_pypl_checkout_image_url' for Paypal
+- Update: merge tag to trunk
 - Fixed:  Updated wp_specialchars to esc_html
 - Added:  Checkout user role selection setting
 - Addes:  Persistent object cache support
